--- a/src/main.css
+++ b/src/main.css
@@ -239,6 +239,7 @@ tbody tr:hover {
 /* ============色板=========== */
 .color{
     color: #E08109;
+    color: #c5b9ac;
     color: #181818;
     color: #0B5A81;
     color: #ececec;
